# wumpus-yewrself

./: Cargo.toml  index.html  index.scss
.github/workflows/: continuous_integration.yml  deploy_github_pages.yml
src/: main.rs
