[package]
name = "wumpus-yew"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
log = "0.4.22"
reqwest = "0.12"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = "0.3.70"
js-sys = "0.3.70"
